electronic-school-code

--- a/style.css
+++ b/style.css
@@ -28,7 +28,7 @@ section{
     border: none;
     padding: 8px 25px;
 }
-#navbar, .head-area{
+#navbar, .head-area, .contact{
     background-color: #f0fff0;
 }
 .started-buttom{
